# hayagriva-manager

./: .gitmodules  .prettierignore  .prettierrc  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yaml
.github/workflows/: ci.yaml
data/: example.bib  hayagriva.yml
data/bib/: example.bib  example2.bib  example3.bib
data/bib-to-hayagriva/: example1.yml  example2.yml
data/from_bib/: example1.yaml
data/from_hayagriva/: example1.bib  example3.bib
data/hayagraiva-to-bib/: example2.bib  hayagriva.bib
data/hayagriva/: example2.yml  example3.yml
src/: app.css  app.html  lib.rs  main.rs
src/lib/: db.ts  hayagriva-schema.ts  hayagriva.ts
src/lib/components/: AlertModal.svelte  BibliographyList.svelte  BibliographyMetadataForm.svelte  ConfirmModal.svelte  CreateBibliographyModal.svelte  EntryDetail.svelte  EntryForm.svelte  EntryList.svelte  FormattableStringInput.svelte  ImportBibliographyModal.svelte
src/lib/formatters/: author.ts  date-formatter.ts  entry-type-formatter.ts  formattable-string.ts  language.ts
src/lib/schemas/: bibliography-metadata.ts  hayagriva.ts
src/lib/services/: bibliography.service.ts  hayagriva.service.ts
src/lib/types/: bibliography.d.ts  (+6 more)
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts  layout.css
static/: site.webmanifest
tests/: conversion.rs
web/: README.md  package.json  wrangler.toml
web/data/: hayagriva.json  hayagriva.toml
web/src/: app.css  app.html  service-worker.ts
web/static/: manifest.json
(+72 files in other folders)
