[package]
name = "hayagriva-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["std"] }
clap = { version = "4.5.39", features = ["derive"] }
hayagriva = { version = "0.8.1", features = ["biblatex"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.22"
